--- a/msuser/src/main/resources/application.properties
+++ b/msuser/src/main/resources/application.properties
@@ -9,3 +9,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.queue=ms-notificacoes
+
+server.port=8081
+
+
