--- a/msuser/src/main/resources/application.properties
+++ b/msuser/src/main/resources/application.properties
@@ -15,6 +15,10 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.queue=ms-notificacoes
 
-server.port=8081
+springdoc.swagger-ui.path=/docs-msuser.html
+springdoc.api-docs.path=/docs-msuser
+springdoc.packages-to-scan=br.com.msuser.web.controller
+
+server.port=8080
 
 
