--- a/msuser/src/main/resources/application.properties
+++ b/msuser/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.rabbitmq.queue=ms-notificacoes
 
 springdoc.swagger-ui.path=/docs-msuser.html
 springdoc.api-docs.path=/docs-msuser
-springdoc.packages-to-scan=br.com.msuser.web.controller
+springdoc.packages-to-scan=compassouol.sp.challenge.msuser.msuser.web.controller
 
 server.port=8080
 
